--- a/ai/src/main/cpp/CMakeLists.txt
+++ b/ai/src/main/cpp/CMakeLists.txt
@@ -30,6 +30,8 @@ if (ANDROID_ABI STREQUAL "arm64-v8a")
     set(MNN_INSTALL_ROOT "${MNN_SOURCE_ROOT}/project/android/build_64")
 elseif (ANDROID_ABI STREQUAL "x86_64")
     set(MNN_INSTALL_ROOT "${MNN_SOURCE_ROOT}/project/android/build_x86_64")
+elseif (ANDROID_ABI STREQUAL "armeabi-v7a")
+    set(MNN_INSTALL_ROOT "${MNN_SOURCE_ROOT}/project/android/build_32")
 else ()
     message(FATAL_ERROR "Unsupported ABI: ${ANDROID_ABI}")
 endif ()
