--- a/.github/workflows/build-armv7a.yml
+++ b/.github/workflows/build-armv7a.yml
@@ -33,7 +33,8 @@ jobs:
         ANDROID_ABI: "armeabi-v7a"
         
     - name: Upload Debug APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: app-debug-armv7a
         path: app/build/outputs/apk/debug/app-debug.apk
+        compression-level: 9
