--- a/.github/workflows/build-armv7a.yml
+++ b/.github/workflows/build-armv7a.yml
@@ -19,16 +19,21 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
         
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
+      with:
+        cache-disabled: true
       
     - name: Build ARMv7a
       run: |
-        ./gradlew assembleDebug
+        ./gradlew assembleDebug --info --stacktrace
       env:
         ANDROID_ABI: "armeabi-v7a"
         
