--- a/.github/workflows/build-armv7a.yml
+++ b/.github/workflows/build-armv7a.yml
@@ -37,9 +37,17 @@ jobs:
       env:
         ANDROID_ABI: "armeabi-v7a"
         
+    - name: Create output directory
+      run: mkdir -p /v7output
+
+    - name: Copy APK to output directory
+      run: |
+        cp app/build/outputs/apk/debug/rikkahub_*_armeabi-v7a-debug.apk /v7output/
+        ls -l /v7output
+
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: app-debug-armv7a
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: /v7output
         compression-level: 9
