--- a/.github/workflows/build-armv7a.yml
+++ b/.github/workflows/build-armv7a.yml
@@ -38,16 +38,16 @@ jobs:
         ANDROID_ABI: "armeabi-v7a"
         
     - name: Create output directory
-      run: mkdir -p /v7output
+      run: mkdir -p v7output
 
     - name: Copy APK to output directory
       run: |
-        cp app/build/outputs/apk/debug/rikkahub_*_armeabi-v7a-debug.apk /v7output/
-        ls -l /v7output
+        cp app/build/outputs/apk/debug/rikkahub_*_armeabi-v7a-debug.apk v7output/
+        ls -l v7output
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: app-debug-armv7a
-        path: /v7output
+        path: v7output
         compression-level: 9
