--- a/.github/workflows/build-armv7a.yml
+++ b/.github/workflows/build-armv7a.yml
@@ -38,11 +38,17 @@ jobs:
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
       
+    - name: Clean build
+      run: |
+        chmod +x gradlew
+        ./gradlew clean
+
     - name: Build ARMv7a Release
       run: |
-        ./gradlew assembleRelease --info --stacktrace
+        ANDROID_ABI=armeabi-v7a ./gradlew assembleRelease --info --stacktrace --warning-mode all --scan
       env:
         ANDROID_ABI: "armeabi-v7a"
+        GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
         
     - name: Create output directory
       run: mkdir -p v7output
