--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -54,7 +54,7 @@ jobs:
           echo "${{ secrets.SIGNING_CONFIG }}" > local.properties
           
           # 写入Google Services配置
-          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > app/google-services.json
 
       - name: Modify gradle config for ARM V7
         run: |
