--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -51,10 +51,14 @@ jobs:
           echo "${{ secrets.KEY_BASE64 }}" | base64 -d > app/app.key
           
           # 写入签名配置到local.properties
-          echo "${{ secrets.SIGNING_CONFIG }}" > local.properties
+          cat > local.properties << 'EOF'
+          ${{ secrets.SIGNING_CONFIG }}
+          EOF
           
           # 写入Google Services配置
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > app/google-services.json
+          cat > app/google-services.json << 'EOF'
+          ${{ secrets.GOOGLE_SERVICES_JSON }}
+          EOF
 
       - name: Modify gradle config for ARM V7
         run: |
