feat: Add secret validation step in GitHub Actions workflow
- Add 'Check required secrets' step to validate all required secrets are configured
- Provides clear error messages if KEY_BASE64, SIGNING_CONFIG, or GOOGLE_SERVICES_JSON is missing
- Fails fast with helpful information instead of cryptic errors during build

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -45,6 +45,25 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      - name: Check required secrets
+        run: |
+          if [ -z "${{ secrets.KEY_BASE64 }}" ]; then
+            echo "❌ Error: KEY_BASE64 secret is not configured"
+            echo "Please add KEY_BASE64 secret to your GitHub repository"
+            exit 1
+          fi
+          if [ -z "${{ secrets.SIGNING_CONFIG }}" ]; then
+            echo "❌ Error: SIGNING_CONFIG secret is not configured"
+            echo "Please add SIGNING_CONFIG secret to your GitHub repository"
+            exit 1
+          fi
+          if [ -z "${{ secrets.GOOGLE_SERVICES_JSON }}" ]; then
+            echo "❌ Error: GOOGLE_SERVICES_JSON secret is not configured"
+            echo "Please add GOOGLE_SERVICES_JSON secret to your GitHub repository"
+            exit 1
+          fi
+          echo "✅ All required secrets are configured"
+
       - name: Prepare build files
         run: |
           # 解码base64编码的keystore文件
