--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -62,24 +62,37 @@ jobs:
           
           # 解码base64编码的keystore文件（如果存在）
           if [ -n "${{ secrets.KEY_BASE64 }}" ]; then
-            echo "${{ secrets.KEY_BASE64 }}" | base64 -d > app/app.key
-            echo "✓ Signing key prepared"
+            echo "${{ secrets.KEY_BASE64 }}" | base64 -d > app/app.key 2>/dev/null || echo "⚠️  Failed to decode signing key"
+            if [ -f app/app.key ] && [ -s app/app.key ]; then
+              echo "✓ Signing key prepared"
+            fi
           fi
           
           # 写入签名配置到local.properties（如果存在）
           if [ -n "${{ secrets.SIGNING_CONFIG }}" ]; then
-            cat > local.properties <<'EOF'
+            cat > local.properties <<'SIGNING_EOF'
 ${{ secrets.SIGNING_CONFIG }}
-EOF
+SIGNING_EOF
             echo "✓ Signing config prepared"
           fi
           
           # 写入Google Services配置（如果存在）
           if [ -n "${{ secrets.GOOGLE_SERVICES_JSON }}" ]; then
-            cat > app/google-services.json <<'EOF'
+            cat > app/google-services.json <<'GOOGLE_EOF'
 ${{ secrets.GOOGLE_SERVICES_JSON }}
-EOF
-            echo "✓ Google Services config prepared"
+GOOGLE_EOF
+            # 验证 JSON 格式
+            if command -v python3 &> /dev/null; then
+              if python3 -m json.tool app/google-services.json > /dev/null 2>&1; then
+                echo "✓ Google Services config prepared (JSON valid)"
+              else
+                echo "✗ Google Services config is not valid JSON"
+                echo "File content preview (first 20 lines):"
+                head -20 app/google-services.json
+              fi
+            else
+              echo "✓ Google Services config prepared (validation skipped)"
+            fi
           fi
 
       - name: Modify gradle config for ARM V7
