fix: Use committed google-services.json instead of Secret
- Remove google-services.json from Secret handling since it's already committed
- Only handle KEY_BASE64 and SIGNING_CONFIG from Secrets
- This avoids JSON corruption issues when writing multi-line content from Secrets
- If google-services.json needs updating, download from Firebase Console and commit

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -53,8 +53,9 @@ jobs:
           # 写入签名配置到local.properties
           echo "${{ secrets.SIGNING_CONFIG }}" > local.properties
           
-          # 写入Google Services配置
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > app/google-services.json
+          # Note: google-services.json is already in the repository
+          # If you need to update it, download from Firebase Console and commit
+          echo "✓ Build configuration prepared"
 
       - name: Modify gradle config for ARM V7
         run: |
