fix: Add stacktrace and diagnostic flags for ARM V7 build debugging
- Add --stacktrace flag to get detailed error information
- Add -Dkotlin.incremental=false to ensure clean Kotlin compilation
- Helps diagnose R8 metadata parsing issues

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -72,7 +72,10 @@ jobs:
       - name: Build ARM V7 APK
         run: |
           chmod +x gradlew
-          ./gradlew clean assembleArmv7Release -Pandroid.injected.build.model=full
+          ./gradlew clean assembleArmv7Release \
+            -Pandroid.injected.build.model=full \
+            --stacktrace \
+            -Dkotlin.incremental=false
         env:
           GRADLE_OPTS: "-Xmx4096m"
 
