fix(build): disable ABI splitting for armv7 build (-Pbuild.universal=false) to avoid IncrementalSplitter errors

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -74,6 +74,7 @@ jobs:
           chmod +x gradlew
           ./gradlew clean assembleArmv7Release \
             -Pandroid.injected.build.model=full \
+            -Pbuild.universal=false \
             --stacktrace \
             -Dkotlin.incremental=false
         env:
