chore(ci): disable minify and shrinkResources for ARM v7 build to isolate R8 packaging issue

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -75,6 +75,8 @@ jobs:
           ./gradlew clean assembleArmv7Release \
             -Pandroid.injected.build.model=full \
             -Pbuild.universal=false \
+            -PminifyEnabled=false \
+            -PshrinkResources=false \
             --stacktrace \
             -Dkotlin.incremental=false
         env:
