ci: remove property overrides from workflow - use Gradle defaults for minify/shrink

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -75,10 +75,7 @@ jobs:
           ./gradlew clean assembleArmv7Release \
             -Pandroid.injected.build.model=full \
             -Pbuild.universal=false \
-            -PminifyEnabled=false \
-            -PshrinkResources=false \
-            --stacktrace \
-            -Dkotlin.incremental=false
+            --stacktrace
         env:
           GRADLE_OPTS: "-Xmx4096m"
 
