--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,8 +34,11 @@ jobs:
           # 写入签名配置到local.properties
           echo "${{ secrets.SIGNING_CONFIG }}" > local.properties
           
-          # 写入Google Services配置
-          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+          # Use committed google-services.json (do NOT use secret)
+          if [ ! -f app/google-services.json ]; then
+            echo "ERROR: app/google-services.json is missing — commit it to the repository instead of using a secret."
+            exit 1
+          fi
 
       - name: Gradle Build
         run: |
