ci: set default shell to bash for workflow jobs (fix set -euo pipefail parse error)

--- a/.github/workflows/build-armv7.yml
+++ b/.github/workflows/build-armv7.yml
@@ -29,7 +29,10 @@ on:
 jobs:
   build-armv7:
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        shell: bash
+
     steps:
       - uses: actions/checkout@v4
         with:
