--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,16 +26,19 @@ jobs:
             ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
 
-      - name: Prepare build files
+      - name: Prepare signing credentials
         run: |
-          # 解码base64编码的keystore文件
-          echo "${{ secrets.KEY_BASE64 }}" | base64 -d > app/app.key
+          # 解码keystore文件到项目根目录
+          echo "${{ secrets.KEY_BASE64 }}" | base64 -d > rikkahub.keystore
           
           # 写入签名配置到local.properties
-          echo "${{ secrets.SIGNING_CONFIG }}" > local.properties
-          
-          # 写入Google Services配置
-          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+          cat > local.properties << 'EOF'
+          storeFile=rikkahub.keystore
+          storePassword=rikkahub@123
+          keyAlias=rikkahub
+          keyPassword=rikkahub@123
+          EOF
+        if: always()
 
       - name: Gradle Build
         run: |
