--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -84,17 +84,24 @@ jobs:
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           echo "Merging upstream/master..."
-          git merge upstream/master -m "chore: sync upstream changes"
-          
-          # 如果有冲突，中止并创建 PR
-          if git status | grep -q "both modified"; then
-            echo "⚠️  Conflicts detected, aborting merge"
-            git merge --abort
+          git merge upstream/master -m "chore: sync upstream changes" || {
+            # 如果 merge 失败（可能是冲突），中止
+            if git status | grep -q "both modified"; then
+              echo "⚠️  Conflicts detected, aborting merge"
+              git merge --abort
+              exit 1
+            fi
             exit 1
-          fi
+          }
           
-          git push origin master
-          echo "✅ Successfully merged upstream changes"
+          # 检查是否有未推送的更改
+          if ! git diff --quiet origin/master; then
+            echo "Pushing merged changes..."
+            git push origin master
+            echo "✅ Successfully merged and pushed upstream changes"
+          else
+            echo "✅ Merge completed (no new commits to push)"
+          fi
 
       - name: Get current version
         id: current_version
@@ -109,9 +116,6 @@ jobs:
         id: bump_version
         if: steps.check_changes.outputs.has_changes == 'true' || github.event.inputs.force_prerelease == 'true'
         run: |
-          # 设置 JDK 用于运行脚本
-          cd /workspaces/rikkahub-armv7a || cd .
-          
           # 获取当前版本
           CURRENT_VERSION=$(grep -oP 'versionName = "\K[^"]+' app/build.gradle.kts | head -1)
           CURRENT_CODE=$(grep -oP 'versionCode = \K[0-9]+' app/build.gradle.kts | head -1)
@@ -130,12 +134,15 @@ jobs:
           sed -i "s/versionCode = $CURRENT_CODE/versionCode = $NEW_CODE/" app/build.gradle.kts
           sed -i "s/versionName = \"$CURRENT_VERSION\"/versionName = \"$NEW_VERSION\"/" app/build.gradle.kts
           
-          # 提交版本更新
-          git add app/build.gradle.kts
-          git commit -m "chore: bump version to $NEW_VERSION for sync" || echo "No version changes"
-          git push origin master
-          
-          echo "✅ Version bumped to $NEW_VERSION (code: $NEW_CODE)"
+          # 提交版本更新（如果有更改则提交）
+          if git diff --quiet app/build.gradle.kts; then
+            echo "No version changes needed"
+          else
+            git add app/build.gradle.kts
+            git commit -m "chore: bump version to $NEW_VERSION for sync"
+            git push origin master
+            echo "✅ Version bumped to $NEW_VERSION (code: $NEW_CODE)"
+          fi
 
   create-prerelease:
     needs: sync-fork
